# peoplegen-rust

./: .editorconfig  Cargo.toml  LICENSE  Makefile  README.md
data/: README.md  male_first_names.txt
src/: args.rs  env.rs  main.rs  numlib.rs  path.rs  people.rs  ssn.rs
