[package]
name = "peoplegen"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
# Clap is for argument parsing.
clap = "4.0.18"
# Tailcall transforms functions to tail-recursive ones.
# https://crates.io/crates/tailcall
#tailcall = "0.1.6"
chrono = "0.4"
csv = "1.1.6"
json = "0.12"
funty = "2.0"
# See https://docs.rs/comp/latest/comp/
# Enables a comprehension-like syntax for Result, Option, Iterator, etc.
comp = "0.2"
rand_distr = "0.4"
