[package]
name = "peoplegen"
description = "Generate fake people data in CSV, JSON, or JSON Lines format."
version = "0.2.2"
edition = "2024"
homepage = "https://github.com/bmc/peoplegen-rust"
authors = ["Brian Clapper <bmc@clapper.org>"]
publish = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
# Clap is for argument parsing.
clap = { version = "4.5.40", features = ["wrap_help"] }
# Tailcall transforms functions to tail-recursive ones.
# https://crates.io/crates/tailcall
#tailcall = "0.1.6"
chrono = "0.4"
csv = "1.3"
funty = "2.0"
# See https://docs.rs/comp/latest/comp/
# Enables a comprehension-like syntax for Result, Option, Iterator, etc.
comp = "0.2.1"
json = "0.12.4"
thousands = "0.2.0"
# Don't upgrade rand_distr to the latest version, as it breaks compatibility
# with rand 0.8.
rand_distr = "0.4.0"
